fbStudy - ShowFriends [need to bugfix]

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,11 +4,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
     
-    <fragment android:name="com.example.douglasfukuharastudy.SelectionFragment"
+    <fragment android:name="com.example.douglasfukuharastudy.fragment.SelectionFragment"
         android:id="@+id/selectionFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <fragment android:name="com.example.douglasfukuharastudy.SplashScreen"
+    <fragment android:name="com.example.douglasfukuharastudy.fragment.SplashScreen"
         android:id="@+id/splashFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
