--- a/res/layout/selection.xml
+++ b/res/layout/selection.xml
@@ -4,23 +4,29 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:gravity="center_horizontal"
-    android:orientation="horizontal" >
+    android:gravity="center_vertical"
+    android:orientation="vertical" >
     
     <com.facebook.widget.ProfilePictureView 
         android:id="@+id/selection_profile_pic" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center"
-	    android:gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="10dp"/>
     <TextView 
         android:id="@+id/selection_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:textColor="#333"
         android:textSize="18sp"/>
+    
+    <ListView 
+        android:id="@+id/selection_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/button_border"/>
 
 </LinearLayout>
